# pystocks

./: .gitattributes  .gitignore  .pre-commit-config.yaml  1.api_contracts.ipynb  2.ibkr_ocr.ipynb  2.ibkr_ocr.py  3.data_prep.ipynb  4.api_series.ipynb  5.analysis.ipynb  AGENTS-old.md  AGENTS.md  GEMINI.md  LICENSE  README.md  analysis copy.ipynb  analysis old corrupted.ipynb  analysis.ipynb  analysis.py  analysis4.ipynb  api_series.ipynb  data_prep.ipynb  data_prep_old.ipynb  eval_gating.py  finance quiz.md  functions.py  get_fundamentals.ipynb  holdings_sample.json  ibkr_api.ipynb  ibkr_ocr.ipynb  ibkr_ocr.py  ibkr_ocr3.ipynb  landing_sample.json  pyproject.toml  replicate_step_3_fetches.ipynb  req.txt  requirements.txt  requirements_old.txt  research_correlations_summary.csv  research_yields.csv  series_api.ipynb  (+1 more)
docs/: 1.OVERVIEW.md  2.REFACTOR_SUMMARY.md  3.IBKR_PORTAL_API.md  4.DATA_SCHEMA.md  5.IMPLEMENTATION_REPORT.md  5.ibkr_json_examples.md  6.IMPLEMENTATION_REPORT.md  6.PLAN.md  6.TAIL_PIPELINE.md  ANALYSIS_PIPELINE.md  Agent review prompt.md  DATA_SCHEMA.md  DISCOVERY_RESOURCE_MAP.md  OVERVIEW.md  PLAN.md  analysis_plan.md  anomaly_review_report.md  architecture_design.md  bond_conids.txt  capability_inventory.md  codex_refresh_times.md  data_contracts_and_time_semantics.md  endpoint_refactor_guide.md  endpoints_reviewed.md  functional_requirements.md  geminianalysis.md  ibkr_json_examples.md  implementation_roadmap.md  interactive_brokers_fundamentals_page.md  master_system_requirements.md  next_steps.md  onboarding.md  operational_checklist.md  test_cli.py  (+6 more)
(+221 files in other folders)
