[project]
name = "pystocks"
version = "0.1.0"

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["pystocks", "src", "notebooks"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
include = ["pystocks_next"]
exclude = [
    "pystocks",
    "src",
    "notebooks",
    "assets",
    "data",
    "docs",
]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
venvPath = "."
venv = "venv"
